<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".AdicionarPrato">

    <EditText
        android:id="@+id/numPrato"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="#E3E3E3"
        android:ems="10"
        android:hint="Preço"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/nomePrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nomePrato"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#E3E3E3"
        android:ems="10"
        android:hint="Nome do prato"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAddPrato"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="#B86A56"
        android:text="Incluir Prato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ingredientesPrato"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="#E3E3E3"
        android:ems="10"
        android:hint="Ingrediente"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/precoPrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomePrato"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/SelImagem"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="Selecionar imagem do prato"
        app:layout_constraintBottom_toTopOf="@+id/numPrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/precoPrato"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:background="#E3E3E3"
        android:ems="10"
        android:hint="Preço"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/PBcarregamento"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagemPrato"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/SelImagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Número do Prato:"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/numPrato"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Nome do Prato:"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/nomePrato"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="30dp"
        android:text="Ingredientes:"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ingredientesPrato"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="Valor:"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/precoPrato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientesPrato"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/gambiarra1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/PBcarregamento"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>